[gd_scene load_steps=2 format=3 uid="uid://cbbpmmvurkivf"]

[ext_resource type="Script" path="res://Script/Dialog/AudioOptions.gd" id="1_gmq13"]

[node name="AudioOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_gmq13")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioHeaderContainer" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioTitleLabel" type="Label" parent="ScrollContainer/VBoxContainer/AudioHeaderContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "VOLUME"

[node name="MusicVolumeVBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ScalePanelContainer" type="PanelContainer" parent="ScrollContainer/VBoxContainer/MusicVolumeVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/MusicVolumeVBoxContainer/ScalePanelContainer"]
layout_mode = 2
text = "MUSIC"

[node name="MusicVolumeHSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/MusicVolumeVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.6
scrollable = false
tick_count = 21
ticks_on_borders = true

[node name="MusicMuteCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/MusicVolumeVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MUTE"

[node name="SfxVolumeVBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ScalePanelContainer" type="PanelContainer" parent="ScrollContainer/VBoxContainer/SfxVolumeVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/SfxVolumeVBoxContainer/ScalePanelContainer"]
layout_mode = 2
text = "SFX"

[node name="SfxVolumeHSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/SfxVolumeVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.6
scrollable = false
tick_count = 21
ticks_on_borders = true

[node name="SfxMuteCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/SfxVolumeVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MUTE"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
